--- a/oapicfg.yaml
+++ b/oapicfg.yaml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/oapi-codegen/oapi-codegen/HEAD/configuration-schema.json
 package: generated
-output: internal/generated/client.gen.go
+output: generated/client.gen.go
 generate:
   models: true
   client: true
